--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "titcotour-helper",
+  "name": "my-ai-helper",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,8 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-openid-connect": "^2.11.0",
     "openai": "^3.1.0"
   },
   "devDependencies": {
